test: complete Phase 3 Go to Project coverage